crates/sifr_python_parser/src/parser/snapshots/sifr_python_parser__parser__tests__expr_mode_invalid_syntax1.snap
---
source: crates/sifr_python_parser/src/parser/tests.rs
expression: error
---
ParseError {
    error: UnexpectedExpressionToken,
    location: 6..12,
}
