crates/sifr_python_parser/src/parser/snapshots/sifr_python_parser__parser__tests__expr_mode_valid_syntax.snap
---
source: crates/sifr_python_parser/src/parser/tests.rs
expression: expr
---
Name(
    ExprName {
        range: 0..5,
        id: "first",
        ctx: Load,
    },
)
