crates/sifr_python_parser/src/parser/snapshots/sifr_python_parser__parser__tests__unicode_aliases.snap
---
source: crates/sifr_python_parser/src/parser/tests.rs
expression: parse_ast
---
[
    Assign(
        StmtAssign {
            range: 0..37,
            targets: [
                Name(
                    ExprName {
                        range: 0..1,
                        id: "x",
                        ctx: Store,
                    },
                ),
            ],
            value: StringLiteral(
                ExprStringLiteral {
                    range: 4..37,
                    value: StringLiteralValue {
                        inner: Single(
                            StringLiteral {
                                range: 4..37,
                                value: "\u{8}another cool trick",
                                flags: StringLiteralFlags {
                                    quote_style: Double,
                                    prefix: Empty,
                                    triple_quoted: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
